--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 @import "tailwindcss";
-
-
-*{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("./fonts/SFPRODISPLAYMEDIUM.OTF") format("opentype");
+  font-weight: 500; /* Medium weight */
+  font-style: normal;
+}
+html {
+  scroll-behavior: smooth;
+}
+* {
+  font-family: "SF Pro Display"
 }
